Commit al master del blogoPost en su vercion mas reciente

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,20 @@
 body {
-    color: deeppink;
-    text-align: center;
+    color: black;
+    text-align: left;
     font-family: "Arial";
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: black;
+    margin: 0 auto;
+}
+
+#conmtainer h1 {
+    font-size: 20px;
 }
