--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,25 @@
 body {
-    color: black;
-    text-align: left;
+    color: #333;
+    text-align: center;
     font-family: "Arial";
-    font-size: 10px;
+    font-size: 16px;
     margin: 0;
     padding: 0;
+}
+
+#cabezera {
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#canezera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
 
 #container {
