--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     color: black;
     text-align: left;
-    font-family: "Arial";
+    font-family: "Courier";
     font-size: 10px;
     margin: 0;
     padding: 0;
