--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,3 +33,10 @@ body {
 #conmtainer h1 {
     font-size: 20px;
 }
+
+#fooder {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
